- [FIX] Pass HTTP route data to the instrumentation agent when present.
This ensures measurements captured by the agent for HTTP server span metrics have the `http.route` attribute.
- [FIX] Ensure provided interceptors correctly set attributes for manually created HTTP server span metrics.
- [FIX] Do not include app-root in server span names.
- [ADD] By default, populate `code.function.name` attribute to name of function containing the start of each span.
This is implemented using the StackWalker API for performance reasons, starting in Java 9.
If StackWalker is not available, the attribute is not populated.
- [ADD] Updated `span/new-span!` to provide defaults for source location, similar to other functions and macros that
create spans. Note: `new-span!` is now a macro.
- [ADD] New middleware `span/wrap-span` and `span/wrap-bound-span` to create a span around subsequent processing.
These can be used as an alternative to the deprecated `wrap-exception-event` to record uncaught exceptions before they are transformed.
- [ADD] New example `word-stream-app` that demonstrates manual instrumentation of a `core.async.flow` application.
- [ADD] Refactored async microservices examples to use https://github.com/xadecimal/async-style[`async-style`], a higher level library over `core.async`.
- Bump deps
* [MAINT] OpenTelemetry `1.53.0`, semconv `1.34.0`, instrumentation `2.19.0-alpha`
* [MAINT] Clojure `1.12.1` However `clj-otel` retains compatibility with Clojure `1.10.3` and later.

=== `0.2.8` (2025-05-22)

- [ADD] Updated microservices examples to export logs to Grafana Loki.
A `Logs` panel has been added to the `HTTP server instances` dashboard.
- Bump deps
* [MAINT] OpenTelemetry `1.50.0`, semconv `1.32.0`, instrumentation `2.16.0-alpha`
** [BREAK] Deprecated `wrap-exception-event` and `exception-event-interceptor`.
These will be stubbed out and later removed in future releases.