@@ -1,3 +1,4 @@
 ;!zprint {:width 140}
 
-{:lint-as {steffan-westcott.clj-otel.api.trace.span/with-span-binding clojure.core/let}}
+{:lint-as {steffan-westcott.clj-otel.api.trace.span/with-span-binding clojure.core/let
+           steffan-westcott.clj-otel.api.trace.span/cf-span-binding   clojure.core/let}}
